--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
 	font-family: 'Raleway', sans-serif;
 }
 
+
+
 /*********************/
 /* DEFAULT STYLES */
 /*********************/
@@ -54,6 +56,7 @@ h1 {
 /* NAVIGATION STYLES */
 /*********************/
 nav {
+	z-index: 1;
 	width: 100%;
 	height: 85px;
 	padding: 0 20px 0 10px;
@@ -248,35 +251,112 @@ nav {
 /* RESERVATIONS PAGE */
 /*********************/
 header {
-	width:auto;
-	height:400px;
-	background-color:lightgrey;
-	text-color: black;
-	padding-top:100px;
-	padding-left:100px;
+	width:100%;
+	height:100vh;
+	background-color: lightgrey;
+	background-image: url("../images/cocktail-01.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding-top:140px;
+	padding-left:150px;
 }
-h1{
-	color:black; 
-    text-align: left;
+
+.res-h1 h1{
+	max-width: 500px;
+	font-size: 30px;
+	text-transform: uppercase;
+	color: var(--ct-white);
+}
+
+.res-header-copy {
+	max-width: 500px;
+	font-size: 10px;
+	text-transform: uppercase;
+	color: var(--ct-white);
+}
+header button{
+	border:2px;
+	border-style:solid;
+	border-color: white;
+    background-color: transparent;
+    padding: 15px;
+    font-size: 1.2rem;
+    border-radius: 5px;
+    margin-top:10px;
+    color: var(--ct-white);
+    text-transform: uppercase;
+}
+header button a{
+	text-decoration: none;
+	color: var(--ct-white);
+}
+
+#map {
+	width:auto;
+	height:350px;
 }
 
 form{
 	width:auto;
 	height:700px;
-	background-color:grey;
+	background-color:white;
+}
+.radio{
+	text-align:center;
+	margin:10px;
+	padding:10px;
 }
 
-header button{
-	border:none;
-    /*background-color: #ff5a5f;*/
-    padding: 15px;
-    color: none;
-    font-size: 1.2rem;
-    border-radius: 5px;
+.radio label {
+	margin: 0 15px;
 }
-#map {
-	width:auto;
-	height:350px;
+.form-box {
+	width:50%;
+	margin:1% 25% 1% 25%;
+	text-align:left;
+}
+
+.form-box label {
+	display: flex;
+	align-items: center;
+}
+
+.form-box label > div {
+	flex-basis: 70px;
+}
+
+.form-box input {
+	flex: 1 1;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+input[type=submit] {
+    width: 100%;
+    background-color: var(--ct-blue);
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+textarea{
+	flex: 1 1;
+	height:150px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+input[type=submit]:hover {
+    background-color: var(--ct-lite-blue);
 }
 
 
@@ -284,9 +364,9 @@ header button{
 /*********************/
 /*    ABOUT PAGE     */
 /*********************/
-/*{ box-sizing: border-box;*/
-/*}*/
-
+.containerjoy {
+	
+}
 .row {
     display: flex;
 }
@@ -307,10 +387,14 @@ header button{
 
 .background-image-about
 {
-	background-image: url("../images/about1.jpg");
 	width: 100%;
-	height: 100px;
-	background-color: #cccccc;
+	height: 400px;
+	background-image: url(../images/about2.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 
@@ -319,7 +403,49 @@ header button{
 /*********************/
 /*   FOOTER STYLES   */
 /*********************/
+footer {
+	width: 100%;
+	height: 200px;
+	padding: 0 20px 0 10px;
+	background-color: var(--ct-dark-grey);
+	border-bottom: 1px solid var(--ct-lite-grey);
+	display: block;
+	/*justify-content: space-between;*/
+	color: var(--ct-white);
+	text-transform: uppercase;
+}
 
+footer img{
+	width: 80px;
+}
+
+.brand-footer{
+	padding: 20px 20px 0 20px;
+}
+
+#footer-container{
+	display:flex;
+	flex-grow:2;
+	width:500px;
+}
+
+.social{
+	
+}
+
+.footer-nav ul {
+	list-style: none;
+	padding-top:20px;
+}
+
+.footer-nav ul li {
+	padding-left: 20px;
+}
+
+.footer-nav ul a, .brand a {
+	text-decoration: none;
+	color: var(--ct-white);
+}
 
 
 
