--- a/css/style.css
+++ b/css/style.css
@@ -16,15 +16,22 @@
 .main-header-content button, button {
 	padding: 10px 30px;
 	margin-top: 20px;
-	background-color: var(--ct-yellow); 
+	background-color: transparent; 
 	border: none;
-	border-radius: 2px;
+	border: 3px solid var(--ct-yellow);
+	border-radius: 3px;
 	outline: none;
 	font-size: 20px;
+	font-weight: bold;
 	text-transform: uppercase;
-	color: var(--ct-white);
+	color: var(--ct-yellow);
 	cursor: pointer;
 	outline: none;
+}
+
+.main-header-content button:hover, button:hover {
+	border: 3px solid var(--ct-lite-blue);
+	color: var(--ct-lite-blue);
 }
 
 h1 {
@@ -213,11 +220,16 @@ nav {
 /*     MENU PAGE     */
 /*********************/
 #container {
-	display: flex;
-
+width:auto;
+height:100vh;
+}
+.menu{
+	margin-bottom:200px;
+	background-image:u;
 }
 .ingredients {
 	font-style: italic;
+	color: #e1b12c;
 }
 .h1 {
 	font-size: 2rem;
@@ -229,14 +241,48 @@ nav {
 .signature {
 	margin: 20px;
 }
-.lady{
-	margin: 20px
+.lady-parent{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color:#fff;
+    margin:50px;
+    background-color:#2B2B2B;
+    border-color: #e1b12c;
 }
- .absinthe {
- 	
+.lady-items {
+    padding-right:130px;
+}
+.lady-items img {
+	width:200px;
+	height:200px;
+}
+ .absinthe-parent {
+ 	display: flex;
+ background:url(../images/absinthe.jpg) no-repeat;
+     background-size: cover;
+     background-position: center;
+    height: 500px;
+	padding:50px;
+     margin:60px 0 60px 0;
  }
+.absinthe-items {
+    padding-right:700px;
+    padding-left: 100;
+}
 .dark {
-	
+    display: flex;
+	margin-bottom: 50px;
+}
+.dark h3 {
+    margin:20px;
+}
+.twelve{
+    margin-bottom: 50px;
+}
+.twelve img{
+	width:100px!important;
+	height:100px;
 }
 .basic {
 	
@@ -258,8 +304,8 @@ header {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    padding-top:140px;
-	padding-left:150px;
+    padding-top: 20%;
+	padding-left: 20%;
 }
 
 .res-h1 h1{
@@ -273,22 +319,6 @@ header {
 	max-width: 500px;
 	font-size: 10px;
 	text-transform: uppercase;
-	color: var(--ct-white);
-}
-header button{
-	border:2px;
-	border-style:solid;
-	border-color: white;
-    background-color: transparent;
-    padding: 15px;
-    font-size: 1.2rem;
-    border-radius: 5px;
-    margin-top:10px;
-    color: var(--ct-white);
-    text-transform: uppercase;
-}
-header button a{
-	text-decoration: none;
 	color: var(--ct-white);
 }
 
@@ -364,8 +394,15 @@ input[type=submit]:hover {
 /*********************/
 /*    ABOUT PAGE     */
 /*********************/
-.containerjoy {
-	
+.background-image-about {
+
+color:#e1b12c;
+
+}
+h2{
+	font-size:200%;
+	font-weight:30px;
+    
 }
 .row {
     display: flex;
@@ -400,6 +437,7 @@ input[type=submit]:hover {
 
 
 
+
 /*********************/
 /*   FOOTER STYLES   */
 /*********************/
@@ -419,32 +457,37 @@ footer img{
 	width: 80px;
 }
 
-.brand-footer{
-	padding: 20px 20px 0 20px;
+.footer-wrapper{
+	width:80%;
+	margin:0 auto;
+	display:flex;
+	justify-content:center;
+	padding:20px 0;
 }
-
 #footer-container{
 	display:flex;
-	flex-grow:2;
-	width:500px;
+	margin-right:10px;
 }
-
-.social{
-	
+.address{
+	margin-left:10px;
 }
-
 .footer-nav ul {
 	list-style: none;
 	padding-top:20px;
+	space-between:2px;
 }
 
 .footer-nav ul li {
 	padding-left: 20px;
 }
 
-.footer-nav ul a, .brand a {
+.footer-nav ul a{
 	text-decoration: none;
 	color: var(--ct-white);
+}
+
+.copyright p{
+	text-align:center;
 }
 
 
@@ -467,6 +510,29 @@ footer img{
 	    transform: translateX(0);
 	}
 }
+
+
+@media screen and (max-width: 1400px) {
+	.main-header-content h1, h1 {
+		font-size: 4em;
+	}
+}
+
+
+@media screen and (max-width: 900px) {
+	.main-header-content h1, h1 {
+		font-size: 3em;
+	}
+}
+
+
+@media screen and (max-width: 700px) {
+	.main-header-content h1, h1 {
+		max-width: 400px;
+		font-size: 2em;
+	}
+}
+
 
 
 
