--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,7 @@ form{
 }
 input[type=submit] {
     width: 100%;
-    background-color: var(--ct-blue);
+    background-color: var(--ct-yellow);
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -392,7 +392,7 @@ textarea{
     box-sizing: border-box;
 }
 input[type=submit]:hover {
-    background-color: var(--ct-lite-blue);
+    background-color: var(--ct-lite-grey);
 }
 
 
@@ -487,7 +487,7 @@ footer {
 	background-color: var(--ct-dark-grey);
 	border-bottom: 1px solid var(--ct-lite-grey);
 	display: block;
-	/*justify-content: space-between;*/
+	justify-content:space-between;
 	color: var(--ct-white);
 	text-transform: uppercase;
 }
@@ -501,23 +501,26 @@ footer img{
 	margin:0 auto;
 	display:flex;
 	justify-content:center;
-	padding:20px 0;
+	padding:40px 0;
 }
 #footer-container{
 	display:flex;
-	margin-right:10px;
+}
+.footer-nav {
+	margin-right: 15px;
 }
 .address{
-	margin-left:10px;
+	margin-left:15px;
 }
 .footer-nav ul {
 	list-style: none;
-	padding-top:20px;
-	space-between:2px;
 }
-
+div ul li:not(:first-child) {
+		padding-top:5px;
+}
+	
 .footer-nav ul li {
-	padding-left: 20px;
+	padding-left: 30px;
 }
 
 .footer-nav ul a{
@@ -525,8 +528,9 @@ footer img{
 	color: var(--ct-white);
 }
 
-.copyright p{
+p.copyright{
 	text-align:center;
+	color: var(--ct-yellow);
 }
 
 
